partially complete my part

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,7 @@
 .App {
-  text-align: center;
+  position: relative;
+  height: 100vh;
+  display: flex;
 }
 
 .App-logo {
@@ -20,7 +22,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
