--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -112,6 +112,7 @@
   font-family: 'Inter', sans-serif, !important;
   font-size: 10pt;
   width: 100%; 
+  height:100%;
 }
 .footer a {
   padding-top: 10pt;
