--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -1,10 +1,8 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@600&display=swap');
 /* base styles */
 * {
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   color: #333;
 }
 
@@ -16,56 +14,56 @@
 }*/
 
 /*find job page*/
-.findjob{
+.findjob {
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-.findjob .Card{
+.findjob .Card {
   /*height: 100pt;*/
-  width:100%;
+  width: 100%;
 }
 /*dropdown menu*/
-.rdn{
+.rdn {
   width: 80%;
 }
 /*images*/
-.image-barber{
+.image-barber {
   height: 100pt;
   opacity: 0.8;
 }
-.image-makeup{
+.image-makeup {
   height: 100pt;
   opacity: 0.8;
 }
-.image-garden{
+.image-garden {
   height: 100pt;
   opacity: 0.8;
 }
 
 /*sign in sign up*/
-.Card{
+.Card {
   text-align: center;
   background-color: #f0f0f0;
-  height:100%;
+  height: 100%;
   min-width: 200pt;
   width: 40%;
 }
 
-.Form{
+.Form {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
   justify-content: center;
-padding-bottom: 20pt;
+  padding-bottom: 20pt;
 }
 .Form .Button {
-  color: #C02121;
+  color: #c02121;
   background-color: white;
-  border:none;
+  border: none;
   border-radius: 2px;
   width: 80pt;
   margin-top: 25pt;
@@ -73,31 +71,31 @@ padding-bottom: 20pt;
   box-shadow: 0 0 3px black;
 }
 .Form .Button:hover {
-  color: #C02121;
+  color: #c02121;
   background-color: #f3dede !important;
 }
 .Form a {
   margin-top: 20pt;
   font-size: 10pt;
-} 
-.center{
+}
+.center {
   width: 100%;
   display: flex;
   justify-content: center;
 }
-.sign{
-  border:none;
-  background-color: #E27B7B;  
+.sign {
+  border: none;
+  background-color: #e27b7b;
   height: 20pt;
   margin: 3pt;
-  width:40%;
+  width: 40%;
   color: white;
   border-radius: 3pt;
 }
-.sign::placeholder{
-  color:white;
+.sign::placeholder {
+  color: white;
 }
-.line{
+.line {
   width: calc(80% + 9pt);
 }
 
@@ -112,10 +110,10 @@ padding-bottom: 20pt;
   margin: 0 auto;
   border-bottom: 1px solid #f2f2f2;
   max-height: 20pt;
-  z-index:999;
+  z-index: 999;
 }
 .navbar h1 {
-  color: #CA1C1C;
+  color: #ca1c1c;
   cursor: pointer;
 }
 .navbar .links {
@@ -124,36 +122,38 @@ padding-bottom: 20pt;
 }
 .navbar .links .toprightbotton {
   color: white;
-  background-color: #E27B7B;
+  background-color: #e27b7b;
   border-radius: 8px;
 }
 .navbar .links .toprightbotton:hover {
   color: white;
-  background-color: #CA1C1C !important;
+  background-color: #ca1c1c !important;
 }
 .navbar a {
   margin-left: 16px;
   text-decoration: none;
   padding: 6px;
-} 
-.navbar a:hover {
-  color: #E27B7B;
 }
-
+.navbar a:hover {
+  color: #e27b7b;
+}
 
 /* footer */
 .footer {
-  bottom:0;
-  background-color: #E27B7B;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  background-color: #e27b7b;
   font-size: 10pt;
-  width: 100%; 
+  width: 100%;
   height: 65pt;
   display: flex;
   justify-content: center;
+  text-align: center;
 }
 .footer a {
   padding-top: 10pt;
   color: white;
   margin-left: 16px;
   text-decoration: none;
-} 
+}
