--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -179,12 +179,13 @@
 
 /* footer */
 .footer {
-  bottom: 0;
+  position: fixed;
   left: 0;
-  background-color: #e27b7b;
-  font-size: 12pt;
-  width: 100%;
-  height: 50pt;
+  bottom: 0;
+  background-color: #E27B7B;
+  font-size: 10pt;
+  width: 100%; 
+  height: 65pt;
   display: flex;
   justify-content: center;
   align-items: center;
