--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -159,3 +159,117 @@ padding-bottom: 20pt;
   margin-left: 16px;
   text-decoration: none;
 } 
+
+/* home search bar */
+
+.content{
+  max-width: 80%;
+  max-height: 600px;
+  margin: 40px auto;
+  padding: 20px;
+}
+
+#home-img{
+  /* background-image: url("media/cosmetics.jpg");
+  background-size: auto; */
+  max-width: 100%;
+  /* max-height: 100%; */
+  height: 300px;
+
+}
+
+.service-container{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  padding: 50px 0;
+}
+
+.grid-item{
+  text-align: center;
+  background-position: center;
+}
+
+.service-icon{
+  background-position: center;
+  height: 200px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+#hairdresser{
+  background-image: url("../images/hair-salon-ic.png");
+}
+
+#makeup{
+  background-image: url("../images/makeup-ic.png");
+}
+
+#nail{
+  background-image: url("../images/nail-polish-ic.png");
+}
+
+.content p{
+  padding: 20px 0;
+  font-size: 40px;
+  color: rgb(165, 0, 0);
+  text-transform: uppercase;
+}
+
+.search-header{
+  font-size: 40px;
+  color: rgb(165, 0, 0);
+  text-align: center;
+}
+
+.home-sb-container{
+  background-color: pink;
+  border-radius: 10px;
+  padding: 50px 0;
+  /* background-image: url("media/sb-flowers.jpg"); */
+}
+
+.home-sb-container p {
+  font-size: 30px;
+  color: rgb(165,0,0);
+  text-align: center;
+}
+
+.sb-container-input {
+  display: flex;
+  justify-content: center;
+}
+
+.sb-button{
+  position: relative;
+  z-index: 100;
+  background-color: rgb(165, 0, 0);
+  color: white;
+  border-radius: 8px;
+  border: 1px solid rgb(165, 0, 0);
+  padding: 0.5em 1.38em 0.5em;
+  font-weight: 600;
+  margin-left: 30px;
+  cursor: pointer;
+}
+
+.sb-examples{
+  display: flex;
+  justify-content:center;
+  margin-top: 20px;
+  gap: 30px;
+}
+
+.btn-secondary{
+  border-radius: 10px;
+  border: 1px solid rgb(165,0,0);
+  padding: 10px;
+  cursor: pointer;
+}
+
+.sb-input{
+  border: 2px solid rgb(165,0,0);
+  border-radius: 10px;
+  padding: 20px;
+  width: 50%;
+}
