--- a/frontend/src/css/SearchPage.css
+++ b/frontend/src/css/SearchPage.css
@@ -69,6 +69,23 @@
   width: inherit;
 }
 
+.location-bar .location-text {
+  outline: none;
+  border: 0;
+  background: #ff7675;
+  color: white;
+  padding: 0px 10px;
+  border-radius: 15px;
+  margin-top: 1.5rem;
+  margin-left: 1.5rem;
+  margin-bottom: 1.5rem;
+  height: 3rem;
+
+}
+
+
+
+
 ::placeholder {
   color: #fff;
 }
