--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -159,3 +159,8 @@ padding-bottom: 20pt;
   margin-left: 16px;
   text-decoration: none;
 } 
+
+#dropdown-btn {
+  margin: 1.5rem 1.5rem;
+  background-color: #ff7675;
+}
