--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -109,7 +109,7 @@
   padding: 10px;
   display: flex;
   align-items: center;
-  margin: 0 auto;
+  margin: 20px auto;
   border-bottom: 1px solid #f2f2f2;
   max-height: 20pt;
   z-index: 999;
@@ -117,10 +117,12 @@
 .navbar h1 {
   color: #ca1c1c;
   cursor: pointer;
+  font-size: 40px;
+  /* color: rgb(165, 0, 0); */
 }
 .navbar .links {
   margin-left: auto;
-  font-size: 10pt;
+  font-size: 12pt;
 }
 .navbar .links .toprightbotton {
   color: white;
@@ -146,11 +148,13 @@
   left: 0;
   bottom: 0;
   background-color: #e27b7b;
-  font-size: 10pt;
+  font-size: 12pt;
   width: 100%;
   height: 65pt;
   display: flex;
   justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 .footer a {
   padding-top: 10pt;
@@ -193,18 +197,6 @@
   background-size: contain;
   background-repeat: no-repeat;
   cursor: pointer;
-}
-
-#hairdresser {
-  background-image: url("../images/hair-salon-ic.png");
-}
-
-#makeup {
-  background-image: url("../images/makeup-ic.png");
-}
-
-#nail {
-  background-image: url("../images/nail-polish-ic.png");
 }
 
 .content p {
@@ -270,4 +262,115 @@
   border-radius: 10px;
   padding: 20px;
   width: 50%;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  /* background-color: #2196F3; */
+  padding: 10px;
+}
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  background-position: contain;
+  width: 100px;
+}
+
+/* #home-haircut-img {
+  background-image: url("../images/haircut.jpg");
+}
+
+#home-nail-img {
+  background-image: url("../images/nail-polish.jpg");
+}
+
+#home-makeup-img {
+  background-image: url("../images/makeup.jpg");
+} */
+
+* {
+  box-sizing: border-box;
+}
+
+.home-img {
+  width: 400px;
+  background-position: center;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+
+.column {
+  flex: 33.33%;
+  padding: 10px;
+  /* justify-content: center;
+  align-items: center; */
+}
+
+.image {
+  position: relative;
+  width: 400px;
+}
+
+.image__img {
+  display: block;
+  width: 100%;
+}
+
+.image__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  color: #ffffff;
+  font-family: "Quicksand", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.25s;
+}
+
+/* .image__overlay--blur {
+  backdrop-filter: blur(5px);
+}
+
+.image__overlay--primary {
+  background: #009578;
+} */
+
+.image__overlay > * {
+  transform: translateY(20px);
+  transition: transform 0.25s;
+}
+
+.image__overlay:hover {
+  opacity: 1;
+}
+
+.image__overlay:hover > * {
+  transform: translateY(0);
+}
+
+.image__title {
+  font-size: 2em;
+  font-weight: bold;
+  color: white;
+}
+
+.image__description p {
+  font-size: 1.25em;
+  margin-top: 0.25em;
+  color: white;
 }
