--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -106,7 +106,7 @@
   position: sticky;
   top: 0;
   background-color: white;
-  padding: 10px;
+  padding: 30px;
   display: flex;
   align-items: center;
   margin: 20px auto;
@@ -144,13 +144,13 @@
 
 /* footer */
 .footer {
-  position: fixed;
+  position:relative;
   left: 0;
   bottom: 0;
   background-color: #e27b7b;
   font-size: 12pt;
   width: 100%;
-  height: 65pt;
+  height: 50pt;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -166,7 +166,7 @@
 /* home search bar */
 
 .content {
-  max-width: 80%;
+  max-width: 100%;
   max-height: 600px;
   margin: 40px auto;
   padding: 20px;
@@ -212,10 +212,15 @@
   text-align: center;
 }
 
+.homepage-search{
+  width:100%;
+}
+
 .home-sb-container {
   background-color: pink;
   border-radius: 10px;
   padding: 50px 0;
+  width: 100%;
   /* background-image: url("media/sb-flowers.jpg"); */
 }
 
@@ -246,15 +251,23 @@
 .sb-examples {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin: 50px;
   gap: 30px;
+  align-items: center;
 }
 
+#sb-examples-title{
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
+  text-transform: none;
+}
 .btn-secondary {
   border-radius: 10px;
-  border: 1px solid rgb(165, 0, 0);
+  border: 3px solid rgb(165, 0, 0);
   padding: 10px;
   cursor: pointer;
+  background-color: white;
 }
 
 .sb-input {
@@ -293,14 +306,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px;
+  margin: 30px 0;
+  /* padding: 20px 0; */
 }
 
 .column {
   flex: 33.33%;
-  padding: 10px;
-  /* justify-content: center;
-  align-items: center; */
+  padding: 50px;
 }
 
 /* Hover Image Annimation Source Below
@@ -309,11 +321,14 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
 .image {
   position: relative;
   width: 400px;
+  width: 100%;
+  /* padding: 80px; */
 }
 
 .image__img {
   display: block;
   width: 100%;
+  border-radius: 10px;
 }
 
 .image__overlay {
@@ -331,6 +346,8 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   justify-content: center;
   opacity: 0;
   transition: opacity 0.25s;
+  cursor: pointer;
+  /* border-radius: 10px; */
 }
 
 /* .image__overlay--blur {
@@ -360,8 +377,8 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   color: white;
 }
 
-.image__description p {
-  font-size: 1.25em;
+.image__description {
+  font-size: 2em;
   margin-top: 0.25em;
   color: white;
 }
