--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -436,6 +436,7 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   margin: 0 auto;
   width: 100%;
   height: 100%;
+  /* text-align: center; */
 }
 
 .footer-content-title{
@@ -450,8 +451,10 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
 
 .footer-content-container{
   display: flex;
+  /* max-width: 1200px; */
+  /* justify-content: center; */
 }
 
 .footer-content-column{
-  margin-right: 30px;
+  margin-right: 50px;
 }
