--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -144,7 +144,7 @@
 
 /* footer */
 .footer {
-  position:relative;
+  position: relative;
   left: 0;
   bottom: 0;
   background-color: #e27b7b;
@@ -212,8 +212,8 @@
   text-align: center;
 }
 
-.homepage-search{
-  width:100%;
+.homepage-search {
+  width: 100%;
 }
 
 .home-sb-container {
@@ -256,7 +256,7 @@
   align-items: center;
 }
 
-#sb-examples-title{
+#sb-examples-title {
   color: black;
   font-weight: bold;
   font-size: 20px;
@@ -296,8 +296,6 @@
 * {
   box-sizing: border-box;
 }
-
-
 
 .home-img {
   width: 400px;
@@ -385,51 +383,51 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   color: white;
 }
 
-.container-wide{
+.container-wide {
   max-width: 1200px;
   margin: 0 auto;
   background-color: #efbbbb80;
   padding: 15px 0;
 }
 
-.container-wide h1{
+.container-wide h1 {
   text-align: center;
   margin-bottom: 40px;
 }
 
-.ready-to-start-container{
+.ready-to-start-container {
   display: flex;
   margin: 0 30%;
 }
 
-.left-ready-to-start-container-border{
+.left-ready-to-start-container-border {
   display: flex;
   border-right: grey solid 1px;
 }
 
-.left-container{
+.left-container {
   text-align: center;
   margin-right: 20px;
 }
 
-.right-ready-to-start-container{
+.right-ready-to-start-container {
   text-align: center;
   margin-left: 20px;
 }
-.customer-picture{
+.customer-picture {
   width: 75%;
   align-self: center;
 }
 
-.provider-picture{
+.provider-picture {
   width: 75%;
 }
 
-.footer-social{
+.footer-social {
   margin-bottom: 30px;
 }
 
-.footer-container{
+.footer-container {
   background-color: #e27b7b;
   /* max-width: 1200px; */
   position: relative;
@@ -439,22 +437,23 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   /* text-align: center; */
 }
 
-.footer-content-title{
-  display:block;
+.footer-content-title {
+  display: block;
   margin-bottom: 20px;
   font-weight: bold;
 }
 
-.footer-links{
+.footer-links {
   vertical-align: baseline;
 }
 
-.footer-content-container{
+.footer-content-container {
   display: flex;
   /* max-width: 1200px; */
   /* justify-content: center; */
+  margin: 0 15%;
 }
 
-.footer-content-column{
+.footer-content-column {
   margin-right: 50px;
 }
