--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -25,7 +25,8 @@
   justify-content: center;
 }
 .findjob .findjobleft{
-  width: 50%;
+  font-size:23pt;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -33,11 +34,11 @@
 .findjob .findjobright{
   margin-top: 30pt;
   margin-bottom: 30pt;
-  width: 50%;
+  width: 100%;
   overflow: hidden;
   position: relative;
   text-align: left;
-  height: 200pt;
+  height: 300pt;
 }
 .slide-right-enter{
   transform: translateX(100%);
@@ -81,6 +82,7 @@
 /*images*/
 .images{
   height: auto;
+  width: 100%;
 }
 /*
 developing cool stuff
@@ -108,10 +110,11 @@ animation
   background-color: #f0f0f0;
   height:100%;
   min-width: 200pt;
-  width: 40%;
+  width: 45%;
 }
 
 .Form{
+  font-size: 18pt;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -120,13 +123,14 @@ animation
   padding-bottom: 20pt;
 }
 .Form .Button {
+  font-size: 18pt;
   color: #C02121;
   background-color: white;
   border:none;
-  border-radius: 2px;
-  width: 80pt;
-  margin-top: 25pt;
-  height: 20pt;
+  border-radius: 6px;
+  width: auto;
+  margin-top: 30pt;
+  height: 40pt;
   box-shadow: 0 0 3px black;
 }
 
@@ -136,7 +140,7 @@ animation
 }
 .Form a {
   margin-top: 20pt;
-  font-size: 10pt;
+  font-size: 16pt;
 } 
 .center{
   width: 100%;
@@ -151,9 +155,11 @@ animation
   width:40%;
   color: white;
   border-radius: 3pt;
+  font-size: 20pt;
+  height: 26pt;
 }
 .sign::placeholder{
-  color:white;
+  color:rgba(255,255,255,0.6);
 }
 .line{
   width: calc(80% + 9pt);
@@ -169,16 +175,17 @@ animation
   align-items: center;
   margin: 0 auto;
   border-bottom: 1px solid #f2f2f2;
-  max-height: 20pt;
+  max-height: 40pt;
   z-index:999;
 }
 .navbar h1 {
+  font-size: 30pt;
   color: #CA1C1C;
   cursor: pointer;
 }
 .navbar .links {
   margin-left: auto;
-  font-size: 10pt;
+  font-size: 15pt;
 }
 .navbar .links .toprightbotton {
   color: white;
@@ -201,8 +208,6 @@ animation
 
 /* footer */
 .footer {
-  position: fixed;
-  left: 0;
   bottom: 0;
   background-color: #E27B7B;
   font-size: 10pt;
