--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -18,55 +18,29 @@
 /*find job page*/
 
 .findjob {
-  height: 100%;
+  height: 80vh;
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
 }
 .findjob .findjobleft{
   font-size:23pt;
-  width: 100%;
+  width: 30%;
   display: flex;
   flex-direction: column;
 }
 
-.findjob .findjobright{
-  margin-top: 30pt;
-  margin-bottom: 30pt;
-  width: 100%;
-  overflow: hidden;
-  position: relative;
-  text-align: left;
-  height: 300pt;
-}
-.slide-right-enter{
-  transform: translateX(100%);
-}
-.slide-right-enter-active{
-  transform: translateX(0%);
-  transition: transform 1500ms ease-in-out;
-}
-.slide-right-exit{
-  transform: translateX(0%);
-}
-.slide-right-exit-active{
-  transform: translateX(-100%);
-  transition: transform 1500ms ease-in-out;
-}
 
-.findjob .Card{
-  /*height: 100pt;*/
-  width: 100%;
+.findjob h1{
+  width:100%; 
+  margin-left:50pt;
 }
 
 .findjob .Button{
   margin-top: 10%;
-  margin-left: 40pt;
+  margin-left: 50pt;
   color: white;
   background-color: #E27B7B;
   border-radius: 8px;
-  height: 10%;
+  height: 50pt;
   width: 50%;
   border: none;
 }
@@ -84,25 +58,21 @@
   height: auto;
   width: 100%;
 }
-/*
-developing cool stuff
-animation
-.bg {
+/*Animation in findjob page*/
+.amination {
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
+  /*
   width: 100vw;
-  height: 100vh;
+  height: 100vh;*/
+  width:65vw;
+  height:auto;
   background-size: cover;
   background-position: center;
   will-change: opacity;
 }
-.animnation{
-  width: 100pt;
-  height: 100pt;
-  color: green;
-  background-color: aqua;
-}*/
+
 
 /*sign in sign up*/
 .Card {
@@ -150,7 +120,6 @@ animation
 .sign {
   border: none;
   background-color: #e27b7b;
-  height: 20pt;
   margin: 3pt;
   width: 40%;
   color: white;
