--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -179,13 +179,12 @@
 
 /* footer */
 .footer {
-  position: fixed;
-  left: 0;
   bottom: 0;
-  background-color: #E27B7B;
-  font-size: 10pt;
-  width: 100%; 
-  height: 65pt;
+  left: 0;
+  background-color: #e27b7b;
+  font-size: 12pt;
+  width: 100%;
+  height: 50pt;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -790,12 +789,19 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
 
 .footer-content-column {
   margin-right: 50px;
+}
+
+.profileButton{
+  font-size: 14pt;
+  color: white;
+  background-color: #e27b7b;
   border:none;
-  border-radius: 2px;
-  width: 80pt;
-  margin-top: 25pt;
-  height: 20pt;
+  border-radius: 3px;
+  width: auto;
+  margin-top: 30pt;
+  height: 40pt;
   box-shadow: 0 0 3px black;
+  margin-left: auto;
 }
 
 .displayProfileLine{
@@ -824,4 +830,55 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   margin: auto;
   position: relative;
   top:50%;
+}
+
+.profileCard {
+  text-align: center;
+  background-color: #f0f0f0;
+  height: 100%;
+  min-width: 200pt;
+  width: 45%;
+}
+
+.Form{
+  font-size: 18pt;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  padding-bottom: 20pt;
+}
+.profile{
+  display:'flex';
+  justify-content: 'center'; 
+  padding-top:'10pt'; 
+  padding-bottom:'30pt'
+}
+.profile_images{
+  height: 50%;
+  width: 50%;
+}
+.profileBasicInfo {
+  border: none;
+  background-color: #e27b7b;
+  margin: 3pt;
+  width: 40%;
+  color: white;
+  border-radius: 3pt;
+  font-size: 16pt;
+  height: 26pt;
+}
+.sign::placeholder{
+  color:rgba(255,255,255,0.6);
+}
+.profileInfoLine {
+  border: none;
+  background-color: #e27b7b;
+  margin: 3pt;
+  color: white;
+  border-radius: 3pt;
+  font-size: 16pt;
+  height: 26pt;
+  width: calc(80% + 9pt);
 }
