--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -800,7 +800,7 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   border-radius: 3px;
   width: auto;
   margin-top: 30pt;
-  height: 40pt;
+  height: 20pt;
   box-shadow: 0 0 3px black;
   margin-left: auto;
 .profileInfoLine{
@@ -851,7 +851,7 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   background-color: #E27B7B;  
   height: 20pt;
   margin: 3pt;
-  width: calc(80% + 9pt);
+  width: calc(40% + 9pt);
   color: white;
   border-radius: 3pt;
   text-align: center;
@@ -874,14 +874,6 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   top:50%;
 }
 
-.profileCard {
-  text-align: center;
-  background-color: #f0f0f0;
-  height: 100%;
-  min-width: 200pt;
-  width: 45%;
-}
-
 .Form{
   font-size: 18pt;
   display: flex;
@@ -897,30 +889,116 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   padding-top:'10pt'; 
   padding-bottom:'30pt'
 }
-.profile_images{
-  height: 50%;
-  width: 50%;
+/* provider profile*/
+.profile::placeholder{
+  color:white;
 }
-.profileBasicInfo {
-  border: none;
-  background-color: #e27b7b;
+.profileInfoLine{
+  border:none;
+  background-color: #E27B7B;  
+  height: 20pt;
   margin: 3pt;
-  width: 40%;
-  color: white;
-  border-radius: 3pt;
-  font-size: 16pt;
-  height: 26pt;
-}
-.sign::placeholder{
-  color:rgba(255,255,255,0.6);
-}
-.profileInfoLine {
-  border: none;
-  background-color: #e27b7b;
-  margin: 3pt;
-  color: white;
-  border-radius: 3pt;
-  font-size: 16pt;
-  height: 26pt;
   width: calc(80% + 9pt);
+  color: white;
+  border-radius: 3pt;
+}
+.profileCard{
+  text-align: center;
+  background-color: #f0f0f0;
+  height:100%;
+  min-width: 200pt;
+  width: 80%;
+  border-style: groove;
+  border-color: #E27B7B;
+  border: 1px solid red;
+}
+
+.profileCardView{
+  text-align: center;
+  background-color: #f0f0f0;
+  height:100%;
+  min-width: 100pt;
+  width: 90%;
+  border-style: groove;
+  border-color: #E27B7B;
+  border: 1px solid red;
+}
+.profileBasicInfo{
+  border:none;
+  background-color: #E27B7B;  
+  height: 20pt;
+  margin: 3pt;
+  width:40%;
+  color: white;
+  border-radius: 3pt;
+}
+.profileBasicInfo::placeholder{
+  color:white;
+}
+
+.profileSaveButton{
+  color: #C02121;
+  background-color: white;
+  border:none;
+  border-radius: 2px;
+  width: 180pt;
+  margin-top: 25pt;
+  height: 20pt;
+  box-shadow: 0 0 3px black;
+  margin-right: 10px;
+}
+.profileCancelButton{
+  color: white;
+  background-color: #C02121;
+  border:none;
+  border-radius: 2px;
+  width: 80pt;
+  margin-top: 25pt;
+  height: 20pt;
+  box-shadow: 0 0 3px black;
+  margin-left: 10px;
+}
+.profileImage{
+  height: auto;
+  width: 40%;
+  border-radius: 10px;
+}
+.profileUploadedImg{
+  display: block;
+  width: 30%;
+  height: 30%;
+  border-radius: 10px;
+  margin-top: 100px;
+  margin-right: 100px;
+}
+
+.profileRow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 0;
+  /* padding: 20px 0; */
+}
+.changePassword{
+  margin-bottom: 50%;
+}
+.profileColumn {
+  
+  padding: 30px;
+  justify-content: space-between;
+}
+.profileImgColumn {
+  height: auto;
+  width: 40%;
+  
+}
+.appointmentButton {
+  margin-top: 10%;
+  color: white;
+  background-color: #C02121;
+  border-radius: 8px;
+  height: 30pt;
+  width: 50%;
+  border: none;
+  box-shadow: 0 0 3px black;
 }
