--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,5 @@
 .App {
-  position: relative;
-  height: 100vh;
-  display: flex;
+  text-align: center;
 }
 
 .App-logo {
@@ -22,6 +20,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-size: calc(10px + 2vmin);
   color: white;
 }
 
