--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -73,7 +73,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: rgb(255, 97, 124);
+	background-color: #e27b7b;
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
 }
@@ -99,7 +99,7 @@
 }
 
 .green_btn {
-	background-color: rgb(255, 97, 124);
+	background-color: #e27b7b;
 	color: white;
 	margin: 10px;
 }
