--- a/frontend/src/css/SignUp.css
+++ b/frontend/src/css/SignUp.css
@@ -22,7 +22,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: rgb(255, 97, 124);
+	background-color: #e27b7b;
 	border-top-left-radius: 10px;
 	border-bottom-left-radius: 10px;
 }
@@ -77,7 +77,7 @@
 	padding: 15px;
 	margin: 5px 0;
 	font-size: 14px;
-	background-color: #f34646;
+	background-color: #e27b7b;
 	color: white;
 	border-radius: 5px;
 	text-align: center;
@@ -97,7 +97,7 @@
 }
 
 .green_btnsignup {
-	background-color: rgb(255, 97, 124);
+	background-color: #e27b7b;
 	color: white;
 	margin: 10px;
 }
