--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@600&display=swap');
 
 /* base styles */
 * {
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   color: #333;
 }
 
@@ -229,7 +229,6 @@
   padding: 50px 0;
 }
 
-
 .service-icon {
   background-position: center;
   height: 200px;
@@ -363,7 +362,7 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
   color: #ffffff;
-  font-family: "Quicksand", sans-serif;
+  font-family: 'Quicksand', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -459,7 +458,6 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   width: 100%;
   height: 100%;
   /* text-align: center; */
-
 }
 
 .footer-content-title {
@@ -577,10 +575,10 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   padding-bottom: 20pt;
 }
 .profile {
-  display: "flex";
-  justify-content: "center";
-  padding-top: "10pt";
-  padding-bottom: "30pt";
+  display: 'flex';
+  justify-content: 'center';
+  padding-top: '10pt';
+  padding-bottom: '30pt';
 }
 
 /* provider profile*/
