EB 33 add a comment inside css

--- a/frontend/src/css/providerRegister.css
+++ b/frontend/src/css/providerRegister.css
@@ -1,5 +1,6 @@
-
-
+/*
+this css file is responsible for pages: FindJob.js, SignUpProvider.js, and SignUpProviderTwo.js
+*/
 /*find job page*/
 
 .findjob {
