--- a/frontend/src/css/Footer.css
+++ b/frontend/src/css/Footer.css
@@ -1,5 +1,3 @@
-
-
 /* footer */
 .footer {
   bottom: 0;
@@ -32,7 +30,6 @@
   width: 100%;
   height: 100%;
   /* text-align: center; */
-
 }
 .footer-content {
   padding: 30px 0;
@@ -50,10 +47,9 @@
 
 .footer-content-container {
   display: flex;
-  /* max-width: 1200px; */
-  /* justify-content: center; */
   margin: 0 15%;
   gap: 20px;
+  color: #333;
 }
 
 .footer-content-column {
