--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -1,4 +1,3 @@
-
 /* navbar */
 .navbar {
   position: sticky;
@@ -11,6 +10,7 @@
   max-height: 40pt;
   z-index: 999;
   margin: 15px 0;
+  color: #333;
 }
 .navbar h1 {
   font-size: 30pt;
@@ -36,6 +36,7 @@
   margin-left: 16px;
   text-decoration: none;
   padding: 6px;
+  color: #333;
 }
 .navbar a:hover {
   color: #e27b7b;
