--- a/frontend/src/css/SearchPage.css
+++ b/frontend/src/css/SearchPage.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap");
 
 .search-page {
   display: flex;
