--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -207,6 +207,11 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   height: 20pt;
   box-shadow: 0 0 3px black;
   margin-left: auto;
+  cursor: pointer;
+}
+.profileButton:hover {
+  background-color: #ca1c1c;
+  color: white;
 }
 .profileInfoLine {
   border: none;
@@ -277,6 +282,14 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
   margin: auto;
   position: relative;
   top: 50%;
+}
+.displayProfileRating {
+  display: block;
+  width: 180%;
+  height: 180%;
+  border-radius: 10px;
+  margin-top: 50px;
+  margin-right: 100px;
 }
 
 .Form {
@@ -371,8 +384,8 @@ https://www.youtube.com/watch?v=exb2ab72Xhs */
 }
 .profileUploadedImg {
   display: block;
-  width: 30%;
-  height: 30%;
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
   margin-top: 100px;
   margin-right: 100px;
