--- a/frontend/src/css/SearchPage.css
+++ b/frontend/src/css/SearchPage.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap");
-@import url("https://cdn.syncfusion.com/ej2/material.css");
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap');
+@import url('https://cdn.syncfusion.com/ej2/material.css');
 
 .search-page {
   display: flex;
@@ -63,6 +63,7 @@
   border: none;
   appearance: none;
   width: 100%;
+  margin: 0;
 }
 
 .search-bar:focus-within {
@@ -82,7 +83,7 @@
   display: flex;
 }
 
-.location-bar .location-bar-text{
+.location-bar .location-bar-text {
   position: relative;
   bottom: 10px;
   left: 10px;
@@ -100,7 +101,6 @@
   height: 2rem;
   text-align: right;
 }
-
 
 /* All block of search results */
 .search-results {
@@ -191,6 +191,7 @@
 
 #provider-card {
   text-decoration: none;
+  color: #000;
 }
 
 ::placeholder {
@@ -216,7 +217,7 @@
 }
 
 .filter-interior-div {
-  background:  #ff6b6b;
+  background: #ff6b6b;
   width: 900px;
   height: 60px;
   position: static;
