--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -5,8 +5,11 @@
 * {
   font-family: 'Inter', sans-serif;
   box-sizing: border-box;
+  text-decoration: auto;
 }
-
+a {
+  color: black;
+}
 /* home search bar */
 
 .content {
