--- a/frontend/src/css/ContactPage.css
+++ b/frontend/src/css/ContactPage.css
@@ -6,6 +6,11 @@ textarea {
     width: 600px;
     height: 150px;
     resize: vertical;
+    padding: 15px;
+    border-radius: 10px;
+    background-color: #edf5f3;
+    margin: 5px 0;
+    font-size: 14px;
 }
 
 .d-flex {
@@ -21,4 +26,19 @@ textarea {
 
 h2 {
     text-decoration: underline;
-  }
+}
+
+input {
+    outline: none;
+    border: none;
+    width: 300px;
+    padding: 15px;
+    border-radius: 10px;
+    background-color: #edf5f3;
+    margin: 5px 0;
+    font-size: 14px;
+}
+
+textarea::placeholder {
+    color: grey;
+}
