--- a/frontend/src/css/ContactPage.css
+++ b/frontend/src/css/ContactPage.css
@@ -52,3 +52,8 @@ input, select, textarea{
     font-size: 14px;
     width: 150px;
 }
+
+.t_border {
+    background-color: black;
+    outline: none;
+}
