--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -334,12 +334,51 @@ a {
   background-color: #f0f0f0;
   height: 100%;
   min-width: 100pt;
-  width: 90%;
+  width: 100%;
   border-style: groove;
   border-color: #e27b7b;
   border: 1px solid red;
+  margin-left: 20px;
+  margin-right: 20px;
 }
-
+.reservationButton {
+  
+  color: white;
+  background-color: #e27b7b;
+  border-radius: 8px;
+  height: 30pt;
+  width: 100%;
+  border: none;
+  box-shadow: 0 0 3px black;
+  padding-right: '10pt';
+  padding-top: '10pt';
+  margin-bottom: 10px;
+  margin-top: 10px;
+  font-size: 14pt;
+}
+.reservationButton:hover {
+  color: white;
+  background-color: #c02121 !important;
+  cursor: pointer;
+}
+.displayReservationButton {
+  display: flex;
+  width: 230%;
+  height: 180%;
+  border-radius: 10px;
+  margin-top: 50px;
+  margin-right: 20px;
+  margin-left: 40px;
+}
+.reservationButtonCard {
+  text-align: center;
+  background-color: white;
+  height: 100%;
+  min-width: 100pt;
+  width: 100%;
+  margin-left: 20px;
+  margin-right: 20px;
+}
 /* CSS for address page */
 .address-form {
   text-align: center;
