EB-17 modified navbar and make it show corresponding navbar based on logged in identity.

--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -27,6 +27,7 @@
   color: white;
   background-color: #e27b7b;
   border-radius: 8px;
+  border: none;
 }
 .navbar .links .toprightbotton:hover {
   color: white;
