--- a/frontend/src/css/components.css
+++ b/frontend/src/css/components.css
@@ -183,7 +183,7 @@ a {
 }
 .displayProfileRating {
   display: block;
-  width: 180%;
+  width: 50%;
   height: 180%;
   border-radius: 10px;
   margin-top: 50px;
@@ -326,6 +326,9 @@ a {
   width: 50%;
   border: none;
   box-shadow: 0 0 3px black;
+}
+.fc td {
+  height:1pt !important;
 }
 
 /* CSS for reservation page */
